[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwikcrud"
dynamic = ["version"]
description = "An AI-powered command-line tool that generates RESTful APIs and admin interfaces based on user prompts"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["ai", "chatgpt", "fastapi", "sqlalchemy", "starlette-admin", "crud"]
authors = [
    { name = "Jocelin Hounon", email = "hounonj@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic>=2.5,<2.6",
    "pydantic-settings",
    "aiofile>=3.8,<3.9",
    "httpx>=0.25,<0.26",
    "openai>=1.3,<1.4",
    "rich>=13",
    "prompt_toolkit>=3.0.41,<3.1",
    "jinja2>=3,<4",
    "black>=23.11.0,<23.12",
    "autoflake>=2.2.1,<2.3",
    "isort>=5.12.0,<5.13",
]

[project.urls]
Documentation = "https://github.com/jowilf/qwikcrud/#readme"
Issues = "https://github.com/jowilf/qwikcrud/issues"
Source = "https://github.com/jowilf/qwikcrud"

[tool.hatch.version]
path = "qwikcrud/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "ruff==0.1.1",
    "pytest>=7.4.3,<7.5"
]
[tool.hatch.envs.default.scripts]
cli = "python -m qwikcrud.cli {args}"
format = [
    "black {args:.}",
    "ruff --fix {args:.}",
]
test = "pytest {args:tests}"
lint = [
    "ruff .",
    "black . --check"
]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.isort]
known-first-party = ["qwikcrud"]

[project.scripts]
qwikcrud = "qwikcrud.cli:main"

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.sdist]
include = ["qwikcrud", "prompts", "templates"]